--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - "3.6"      # current default Python on Travis CI
 # command to install dependencies
 install:
-  - pip install -r requirements.txt
+  - pip -q install -e .
 # command to run tests
 script:
   - pytest
